# prefect-monorepo

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.buy  Dockerfile.demo  Dockerfile.many  Dockerfile.other_base  Dockerfile.psyco  Dockerfile.psycopg  README.md  README.me  deployment.yaml  docker-compose.yaml  healthcheck-deployment.yaml  many-of-the-same.yaml  prefect.yaml  pyproject.toml  requirements.txt  triggers.yaml
.github/workflows/: canary.yml  deploy-flows.yml  env-separated-deploy.yml  failure.yml  k8s-worker.yml  pyproject.yml  repros.yml  run_worker.yml  sucks.yml
.prefect/: flows.json
examples/cf/: Dockerfile  api.py  compose.yml
examples/server/: compose.yaml
examples/serving/: Dockerfile  a_flow.py
examples/worker/: docker-compose.yaml
repros/: 12857.py  15777.py  16766.py  17699.py  version.py
scripts/: create_bespoke_ecs_workpool.py  deploy.py  get_flow_entrypoints.py  run_worker_for_a_bit.py  validate_prefect_yaml.py
src/background_tasks/: api.py  client.py  tasks.py
src/demo_project/: Dockerfile.test  accepts_model.py  chain.py  crashes.py  daily_flow.py  demo_flow.py  get_served.py  healthcheck.py  hello_docker.py  helpers.py  many_deploy.py  modal_repro.py  no_deps.py  param_sig.py  read_env.py  receives_webhook_event.py  relative_import_deps.py  secret_param.py  sleepy.py  tagged_upstream_flow.py  test.py  uses_local_helpers.py  uses_other_base_image.py  uses_psycopg.py  uses_secret.py  validating_types.py  worker.py  write_email_to_user.py
src/demo_project/steps/: docker.py
tests/: conftest.py  test_hooks_called.py  test_my_block.py
